# promptkeep

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
contributing/: index.html
docs/: contributing.md  index.md  installation.md  reference.md  usage.md
docs/stylesheets/: extra.css
installation/: index.html
promptkeep/: utils.py
reference/: index.html
scripts/: debug_plugin.py  generate_reference_docs.py
search/: search_index.json
src/promptkeep/: __init__.py  __main__.py  cli.py  config.py  constants.py  context.py  exceptions.py  main.py  models.py  protocols.py  repository.py  services.py  utils.py
src/promptkeep/template_vault/Prompts/: example_prompt.md
superpowers/plans/2026-03-23-architecture-improvements/: index.html
superpowers/specs/2026-03-23-architecture-improvements-design/: index.html
tests/: test_cli.py  test_config.py  test_context.py  test_exceptions.py  test_main.py  test_models.py  test_repository.py  test_services.py  test_utils.py
usage/: index.html
