[project]
name = "promptkeep"
version = "0.1.0"
description = "A CLI tool for managing and accessing your AI prompts"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "typer>=0.9.0",
    "pyperclip>=1.8.2",
    "rich>=13.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.typer]
help = "A CLI tool for managing and accessing your AI prompts"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 