[project]
name = "promptkeep"
version = "0.1.0"
description = "A CLI tool for managing and accessing your AI prompts"
authors = [
    {name = "Lev Craig", email = "mtnlark@pm.me"}
]
dependencies = [
    "typer>=0.9.0",
    "pyperclip>=1.8.2",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]
requires-python = ">=3.8"

[project.scripts]
promptkeep = "promptkeep.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
src-layout = true

[tool.hatch.build]
include = [
    "src/promptkeep/template_vault/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/promptkeep"]

[tool.typer]
help = "A CLI tool for managing and accessing your AI prompts"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 